[tool.poetry]
name = "whenareyou"
version = "0.5.0"
description = "Gets the time zone name of any location in the world."
authors = ["Florian Obersteiner <f.obersteiner@posteo.de>", "Lasse Schuirmann <lasse.schuirmann@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.7"
timezonefinder = "^5.2"
requests = "^2.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
