[tool.poetry]
name = "whenareyou"
version = "0.5.0"
description = "Gets the time zone name of any location in the world."
authors = ["Florian Obersteiner <f.obersteiner@posteo.de>", "Lasse Schuirmann <lasse.schuirmann@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.7"
timezonefinder = "^5.2"
requests = "^2.27"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"] # allows pip install -e .
build-backend = "poetry.core.masonry.api"
